# SoftBodyLib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
source/: CMakeLists.txt
source/executable/: CMakeLists.txt  exe_main.cpp
